Develop (#6)
Update: Endpoints refactor New: forgot and reset password feature New: sorting and pagination
