# src/controllers/index.js
@@ -1,0 +1,8 @@
+module.exports = {
+  AuthController: require('./auth.controller'),
+  TechController: require('./technology.controller'),
+  UserController: require('./user.controller'),
+  ProfileController: require('./profile.controller'),
+  CourseController: require('./course.controller'),
+  ProjectController: require('./project.controller'),
+};
