# src/middlewares/resources/index.js
@@ -1,0 +1,7 @@
+module.exports = {
+  techMiddleware: require('./technology.middleware'),
+  userMiddleware: require('./user.middleware'),
+  profileMiddleware: require('./profile.middleware'),
+  courseMiddleware: require('./course.middleware'),
+  projectMiddleware: require('./project.middleware'),
+};
