# src/routes/course.routes.js
@@ -1,86 +1,34 @@
 const { Router } = require('express');
-const { mongo } = require('mongoose');
-const { CourseService } = require('../services');
-const { AuthenticationMiddleware } = require('../middlewares');
+const { PAGINATION_TYPES } = require('../constants');
+
+const { CourseController } = require('../controllers');
+const {
+  AuthenticationMiddleware,
+  courseMiddleware: middleware,
+  AdvancedResultsMiddleware,
+} = require('../middlewares');
 
 const courseRouter = new Router();
 
-courseRouter.get('/', AuthenticationMiddleware, async (req, res) => {
-  const {
-    user: { _id: userId },
-  } = req;
+courseRouter.get(
+  '/',
+  AuthenticationMiddleware,
+  AdvancedResultsMiddleware(PAGINATION_TYPES.COURSES.type),
+  CourseController.getAllCourses
+);
 
-  const courses = await CourseService.getAllCourses(userId);
+courseRouter.post('/', AuthenticationMiddleware, CourseController.createCourse);
 
-  res.status(200).json({
-    status: 'success',
-    data: courses,
-  });
-});
+courseRouter.put(
+  '/:courseUuid',
+  [AuthenticationMiddleware, middleware.loadCourse, middleware.canEditCourse],
+  CourseController.updateCourse
+);
 
-courseRouter.post('/', AuthenticationMiddleware, async (req, res) => {
-  const {
-    user: { _id: userId },
-  } = req;
-  const { body: newCourse } = req;
-
-  let course;
-
-  if (newCourse._id == null) {
-    // creating new course
-    newCourse._id = mongo.ObjectId();
-    newCourse.userId = userId;
-  } else {
-    // is editing existing course
-    course = await CourseService.getOneCourse(newCourse._id);
-
-    if (!course) {
-      const err = new Error('Course not found');
-      err.status = 404;
-      throw err;
-    }
-
-    if (course.userId != userId) {
-      const err = new Error('Unathorized - This is not your course');
-      err.status = 403;
-      throw err;
-    }
-  }
-
-  course = await CourseService.createOrUpdateCourse(newCourse);
-
-  res.status(200).json({
-    status: 'success',
-    data: course,
-  });
-});
-
-courseRouter.delete('/:id', AuthenticationMiddleware, async (req, res) => {
-  const {
-    user: { _id: userId },
-  } = req;
-
-  const { id } = req.params;
-  let course = await CourseService.getOneCourse(id);
-
-  if (!course) {
-    const err = new Error('Course not found');
-    err.status = 404;
-    throw err;
-  }
-
-  if (course.userId != userId) {
-    const err = new Error('Unathorized');
-    err.status = 403;
-    throw err;
-  }
-
-  course = await CourseService.deleteCourse(id);
-
-  res.status(200).json({
-    status: 'success',
-    data: course,
-  });
-});
+courseRouter.delete(
+  '/:courseUuid',
+  [AuthenticationMiddleware, middleware.loadCourse, middleware.canEditCourse],
+  CourseController.deleteCourse
+);
 
 module.exports = courseRouter;
